# PushStream

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wangqi/demo/pushstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JasonPushStream.cpp  native-lib.cpp
app/src/main/cpp/include/libavutil/: mathematics.h
app/src/main/java/com/wangqi/demo/pushstream/: FFmpegUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wangqi/demo/pushstream/: ExampleUnitTest.java
